--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@clerk/nextjs": "^4.29.5",
     "@clerk/themes": "^1.7.9",
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.9.0",
+    "@prisma/client": "5.7.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -40,6 +40,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tremor/react": "^3.13.4",
     "@uploadthing/react": "^6.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -49,7 +50,7 @@
     "lucide-react": "^0.319.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
-    "prisma": "^5.9.0",
+    "prisma": "5.7.1",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
